--- a/index.html
+++ b/index.html
@@ -3,118 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="src/styles.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Weather App</title>
   </head>
-
   <body>
     <div class="container">
       <div class="weather-app">
-        <form class="search-form" id="search-form">
+        <form id="search-form" class="mb-3">
           <div class="row">
             <div class="col-9">
-      <input 
-      type="search" 
-      placeholder="Enter your city"
-      autofocus="on"
-      autocomplete="off"
-      id="city-input"
-      class="form-control shadow-sm"
-      />
-      </div>
-      <div class="col-3">
-      <input
-      type="submit" 
-      value="Search"
-      class="form-control btn btn-primary shadow-sm" 
-      />
-        </div>
-        <div class="col-3">
-          <button type="button" class="btn btn-success"
-          id="current-location-button">
-          Current
-        </button>
-        </div>
-      </div>
+              <input
+                type="search"
+                placeholder="Enter a city.."
+                class="form-control"
+                id="city-input"
+                autocomplete="off"
+              />
+            </div>
+            <div class="col-3">
+              <input
+                type="submit"
+                value="Search"
+                class="btn btn-primary w-100"
+              />
+            </div>
+          </div>
         </form>
-      <h1 id="city">
-        Cape Town
-      </h1>
-      <ul>
-        <li id="date"></li>
-        <li id="description">Mostly cloudy</li>
-      </ul>
-        <div class="row">
-          <div class="col-6">
-        <div class="clearfix"> 
-          <img src="https://tse1.mm.bing.net/th?id=OIP.gPgm4hTFZv54-gHXC_HA3AHaFP&pid=Api&P=0&h=180"
-          alt="Cloudy icon"
-          class="weather-icon float-left"
-          />
-          <div class="float-left">
-            <span class="temperature" id="temperature">19</span><span class="units">°C</span>
+        <div class="overview">
+          <h1 id="city"></h1>
+          <ul>
+            <li>Last updated: <span id="date"></span></li>
+            <li id="description"></li>
+          </ul>
+          <div class="row">
+            <div class="col-6">
+              <div class="d-flex weather-temperature">
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/shower-rain-night.png"
+                  alt="Rainy"
+                  id="icon"
+                />
+                <div>
+                  <strong id="temperature"></strong>
+                  <span class="units">
+                    <a href="#" id="celsius-link" class="active">°C</a>|
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-6">
-        <ul>
-          <li>
-            Humidity: <span id="humidity">77</span>%
-          </li>
-          <li>
-            Wind: <span id="wind">8</span> km/h
-          </li>
-        </ul>
-      </div>
+      <small>
+        <a href="https://github.com/Palesa-Mabote/Weather-app" target="_blank"
+          >Open-source code</a
+        >
+        by Palesa Mabote
+      </small>
     </div>
-  </div>
-</div>
-<div class="divider-horizontal"></div>
-      <center>
-      <div class="vertical-line">
-      <span>
-        Mon<br />
-        ☀️<br />
-        16°
-      </span>
-      </div>
-      <div class="vertical-line">
-        <span>
-          Tues<br />
-          ⛅<br />
-          21°
-        </span>
-      </div>
-      <div class="vertical-line">
-        <span>
-          Wed<br />
-          ☁️<br />
-          19°
-        </span>
-      </div>
-      <div class="vertical-line">
-        <span>
-          Thurs<br />
-          🌧️<br />
-          16°
-        </span>
-      </div>
-      <div class="vertical-line">
-        <span>
-          Fri<br />
-          ⛅<br />
-          17°
-        </span>
-      </div>
-      </center>
-      <br />
-      <a href="https://github.com/Palesa-Mabote/Weather-app" target="_blank">Open-source code</a>
-      , by Palesa Mabote
-    </form>
     <script src="src/index.js"></script>
   </body>
 </html>
-      
