Added the weather forecast div on the HTML file

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast">
+          </div>
         </div>
       </div>
       <small>
@@ -74,7 +76,6 @@
         >
         by Palesa Mabote
       </small>
-    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
